update version 3.0.0